Fixed accessibility contrast issues in Database Table badges

--- a/css/libguides.css
+++ b/css/libguides.css
@@ -98,7 +98,7 @@ button.btn.btn-primary {
 iframe {
     border: 0 !important;
 }
-#cms-footer ul li h4 {
+#cms-footer ul li h3 {
     font-family: AlternateGothicFSNo3,Arial,sans-serif;
     letter-spacing: 1px;
     color: #fff;
